[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.79"
chrono = "0.4.37"
fake = { version = "2.9.2", features = ["uuid", "time", "dummy", "derive"] }
mockall = "0.12.1"
rand = "0.8.5"
reqwest = "0.12.3"
rstest = "0.18.2"
tokio = { version = "1.37.0", features = ["full"] }
